vcs/specs/parser/fail/expressions/missing_comprehension_for.vr
// @test: parse-fail
// @level: L0
// @tags: parser, expressions, comprehension, for, error
// @description: Comprehension missing for clause
// @expected-error: E018

fn test() {
    let x = [x | ];  // Missing for clause after expression
}
